==> khanhduy19/Graduateproject/Core/Src/lora.c <==
#include "string.h"
#include "driver.h"
#include "lora.h"
#include "stdlib.h"

bool LoRa_Init(long frequency)
{
    // setup pins
    LoRa_setPins();

    // perform reset
    LoRa_Chip_Reset(0);
    HAL_Delay(100);
    LoRa_Chip_Reset(1);
    HAL_Delay(100);

    // check version
    uint8_t version = LoRa_readRegister(REG_VERSION);

    if(version != 0x12)
    {
        return 0;
    }

    // put in sleep mode
    LoRa_sleep();

    // set frequency
    LoRa_setFrequency(frequency);

    // set base addresses
    LoRa_writeRegister(REG_FIFO_TX_BASE_ADDR, 0);
    LoRa_writeRegister(REG_FIFO_RX_BASE_ADDR, 0);

    // set LNA boost
    LoRa_writeRegister(REG_LNA, LoRa_readRegister(REG_LNA) | 0x03);

    // set auto AGC
    LoRa_writeRegister(REG_MODEM_CONFIG_3, 0x04);

    // set output power to 17 dBm
    LoRa_setTxPower(19, PA_OUTPUT_PA_BOOST_PIN);

    // put in standby mode
    LoRa_idle();

    return 1;
}

int LoRa_packetRssi(void)
{
    return (LoRa_readRegister(REG_PKT_RSSI_VALUE) - (_frequency < RF_MID_BAND_THRESHOLD ? RSSI_OFFSET_LF_PORT : RSSI_OFFSET_HF_PORT));
}

float LoRa_packetSnr(void)
{
    return ((int8_t)LoRa_readRegister(REG_PKT_SNR_VALUE)) * 0.25;
}

int LoRa_sendPacket(const char *buffer)
{
    LoRa_beginPacket(0);
    int size = LoRa_write(buffer, strlen(buffer));
    LoRa_endPacket(1);

    return size;
}

int LoRa_receivePacket(char *buffer, uint32_t timeout)
{
    while(!_dio0_rx_isr)
    {
        if(!--timeout)
        {
            return 0;
        }

        HAL_Delay(1);
    }

    _dio0_rx_isr = 0;
    int i, size = _packetSize;
    _packetSize = 0;

    if(size > 0)
    {
        for(i = 0; i < size; i++)
        {
            while(LoRa_available())
            {
                buffer[i++] = LoRa_read();
            }
        }
    }

    return size;
}

void LoRa_receive(int size)
{
    LoRa_writeRegister(REG_DIO_MAPPING_1, 0x00); // DIO0 => RXDONE

    if(size > 0)
    {
        LoRa_implicitHeaderMode();
        LoRa_writeRegister(REG_PAYLOAD_LENGTH, size & 0xff);
    }
    else
    {
        LoRa_explicitHeaderMode();
    }

    LoRa_writeRegister(REG_OP_MODE, MODE_LONG_RANGE_MODE | MODE_RX_CONTINUOUS);
}

void LoRa_idle(void)
{
    LoRa_writeRegister(REG_OP_MODE, MODE_LONG_RANGE_MODE | MODE_STDBY);
}

void LoRa_sleep(void)
{
    LoRa_writeRegister(REG_OP_MODE, MODE_LONG_RANGE_MODE | MODE_SLEEP);
}

void LoRa_setTxPower(int level, bool outputPin)
{
    if(PA_OUTPUT_RFO_PIN == outputPin)
    {
        // RFO
        if(level < 0)
        {
            level = 0;
        }
        else if(level > 14)
        {
            level = 14;
        }

        LoRa_writeRegister(REG_PA_CONFIG, 0x70 | level);
    }
    else
    {
        // PA BOOST
        if(level > 17)
        {
            if(level > 20)
            {
                level = 20;
            }

            // subtract 3 from level, so 18 - 20 maps to 15 - 17
            level -= 3;

            // High Power +20 dBm Operation (Semtech SX1276/77/78/79 5.4.3.)
            LoRa_writeRegister(REG_PA_DAC, 0x87);
            LoRa_setOCP(140);
        }
        else
        {
            if(level < 2)
            {
                level = 2;
            }

            //Default value PA_HF/LF or +17dBm
            LoRa_writeRegister(REG_PA_DAC, 0x84);
            LoRa_setOCP(100);
        }

        LoRa_writeRegister(REG_PA_CONFIG, PA_BOOST | (level - 2));
    }
}

void LoRa_setFrequency(long frequency)
{
    _frequency = frequency;

    uint64_t frf = ((uint64_t)frequency << 19) / 32000000;

    LoRa_writeRegister(REG_FRF_MSB, (uint8_t)(frf >> 16));
    LoRa_writeRegister(REG_FRF_MID, (uint8_t)(frf >> 8));
    LoRa_writeRegister(REG_FRF_LSB, (uint8_t)(frf >> 0));
}

void LoRa_setSpreadingFactor(int sf)
{
    if(sf < 6)
    {
        sf = 6;
    }
    else if(sf > 12)
    {
        sf = 12;
    }

    if(sf == 6)
    {
        LoRa_writeRegister(REG_DETECTION_OPTIMIZE, 0xc5);
        LoRa_writeRegister(REG_DETECTION_THRESHOLD, 0x0c);
    }
    else
    {
        LoRa_writeRegister(REG_DETECTION_OPTIMIZE, 0xc3);
        LoRa_writeRegister(REG_DETECTION_THRESHOLD, 0x0a);
    }

    LoRa_writeRegister(REG_MODEM_CONFIG_2, (LoRa_readRegister(REG_MODEM_CONFIG_2) & 0x0f) | ((sf << 4) & 0xf0));
    LoRa_setLdoFlag();
}

void LoRa_setPreambleLength(long length)
{
    LoRa_writeRegister(REG_PREAMBLE_MSB, (uint8_t)(length >> 8));
    LoRa_writeRegister(REG_PREAMBLE_LSB, (uint8_t)(length >> 0));
}

void LoRa_setSyncWord(int sw)
{
    LoRa_writeRegister(REG_SYNC_WORD, sw);
}

void LoRa_enableCrc(void)
{
    LoRa_writeRegister(REG_MODEM_CONFIG_2, LoRa_readRegister(REG_MODEM_CONFIG_2) | 0x04);
}

void LoRa_disableCrc(void)
{
    LoRa_writeRegister(REG_MODEM_CONFIG_2, LoRa_readRegister(REG_MODEM_CONFIG_2) & 0xfb);
}

void LoRa_explicitHeaderMode(void)
{
    _implicitHeaderMode = 0;
    LoRa_writeRegister(REG_MODEM_CONFIG_1, LoRa_readRegister(REG_MODEM_CONFIG_1) & 0xfe);
}

void LoRa_implicitHeaderMode(void)
{
    _implicitHeaderMode = 1;
    LoRa_writeRegister(REG_MODEM_CONFIG_1, LoRa_readRegister(REG_MODEM_CONFIG_1) | 0x01);
}
